# ops

./: .gitignore
OPS1/lab1/: sop-lab-1.md  sources.txt
OPS1/lab1/przykladowe_cwiczenia/1/: prog  prog.c
OPS1/lab1/przykladowe_cwiczenia/2/: out.txt  prog  prog.c
OPS1/lab1/tutorial/exercise1-1-gcc/: commands.txt  hello.h  main.c  my_program
OPS1/lab1/tutorial/exercise1-2-make/: Makefile  hello.c  my_program
OPS1/lab1/tutorial/exercise10-11/: Makefile  prog10  prog10.c
OPS1/lab1/tutorial/exercise11/: Makefile  prog11.c
OPS1/lab1/tutorial/exercise12/: prog12  prog12.c
OPS1/lab1/tutorial/exercise13/: prog13  prog13.c
OPS1/lab1/tutorial/exercise2/: Makefile  error.file  prog2  prog2.c
OPS1/lab1/tutorial/exercise3/: Makefile  data.txt  prog3  prog3.c
OPS1/lab1/tutorial/exercise4/: Makefile  prog4  prog4.c
OPS1/lab1/tutorial/exercise5/: Makefile  input.txt  prog5  prog5.c
OPS1/lab1/tutorial/exercise6/: Makefile  prog6  prog6.c
OPS1/lab1/tutorial/exercise7/: Makefile  prog7  prog7.c
OPS1/lab1/tutorial/exercise8/: Makefile  prog8  prog8.c
OPS1/lab1/tutorial/exercise9-10/: Makefile  file1  prog9  prog9.c
OPS1/lab2/przykladowe_cwiczenia/cs1/: prog  prog.c
OPS1/lab2/przykladowe_cwiczenia/cs2/: prog.c
OPS1/lab2/przykladowe_cwiczenia/strona/: prog  prog.c
OPS1/lab2/tutorial/: lab2.md  lab2_thoery.md
OPS1/lab2/tutorial/exercise_1/: prog1  prog1.c
OPS1/lab2/tutorial/exercise_2/: Makefile  prog2  prog2.c
OPS1/lab2/tutorial/exercise_3/: prog3  prog3.c
OPS1/lab2/tutorial/exercise_4/: prog4  prog4.c  test
OPS1/lab3/: lab3.md  template.c
OPS1/lab3/przykladowe_cwiczenia/cs1/: prog  prog.c
OPS1/lab3/przykladowe_cwiczenia/tut/: prog  prog.c
OPS1/lab3/tutorial/exercise_1/: Makefile  prog  prog.c
OPS1/lab3/tutorial/exercise_2/: prog  prog.c
OPS1/lab3/tutorial/exercise_3/: prog  prog.c
OPS1/lab3/tutorial/exercise_4/: prog  prog.c  progg
OPS1/lab4/: Lab-4.md  lab4-wyklad.md
OPS1/lab4/cs/: prog  prog.c
OPS1/lab4/exercise/: prog  prog.c
OPS1/lab4/lab4nieparz/: in  key  prog.c
OPS1/lab4/prog/: Makefile  key  out  prog  prog.c
OPS1/lab4/tutorial/: prog  prog.c  workfile copy
OPS2/: CMakeLists.txt
OPS2/lab1/: client  client.c  lab01.md  prog2  prog2.c  prog3  prog3.c  prog4  prog4.c  prog5.c  server.c
OPS2/lab2/: Makefile.mk  client.c  input  lab2.md  prog.c  prog2.c  server.c
OPS2/lab3/: Makefile  mysocklib.c  mysocklib.h  tcp-client.c  temp.c  tutorial-gnu-org.md  tutorial-manpages.md
OPS2/lab3/exercise/: client  client.c  server  server.c
OPS2/lab3/lab/: server.c
OPS2/lab3/lab-udp-task/: client.c  server.c
OPS2/lab3/local_connection/: Makefile  client  client.c  server  server.c
OPS2/lab3/tcp-quiz-app/: questions.txt  server.c
OPS2/lab3/tcp_connection/: Makefile  client  client.c  server  server.c
OPS2/lab3/udp_connection/: Makefile  client  client.c  server  server.c  test.test
OPS2/lab4/: notatki.md  pthread_detach_example  pthread_detach_example.c  thread_signals_example  thread_signals_example.c
OPS2/lab4/exercise1/: Makefile  client  client.c  server.c
OPS2/lab4/exercise2/: client  client.c  server.c
OPS2/lab4/exercise3/: Makefile  server.c
OPS2/mysocklib/: mysocklib.c  mysocklib.h
(+7 files in other folders)
